Fix controls overflow

--- a/src/styles/controls.scss
+++ b/src/styles/controls.scss
@@ -9,7 +9,7 @@ $switch-size: 40px;
 
 .controls-data {
   display: flex;
-  overflow: scroll;
+  overflow: auto;
   flex: 0 0 auto;
 }
 
